--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <style>
         form{
             display: grid;
-            grid-template-columns:50px 50px 50px 50px;
+            grid-template-columns:100px 100px 100px 100px;
             gap: 10px;
+            margin-left: 350px;
+            margin-top: 10px;
+            padding-top: 20px;
+            border: 2px solid;
+            padding: 40px;
+            width: 420px;
+             background-image: url(solarimg.jpeg);
+            border-radius: 10px;
+            box-shadow:0 0 20 rgb(30, 28, 28);
+        
+        
         }
+    .kiran2{
+margin-left:100px;
+width: 100px;
+height:100px;
+margin-top: 0px;
+border-radius:10px ;
+font-size: 30px;
+text-align: center;
+    }
+    .kiran1{
+        font-size: 40px;
+        width:310px;
+        height:100px;
+        border-radius: 10px;
+        background-color: rgb(245, 252, 252);
+
+    }
+    .kiran{
+padding-top: 0px;
+height: 100px;
+text-align: center;
+font-size: 50px;
+border-radius: 10px;
+box-shadow:10px black;
+color: rgb(16, 16, 20);
+border: 2px solid black;
+background-color: rgb(255, 254, 252);
+    }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +54,8 @@
 <body>
     <div class="container">
 <form name="content">
-<input class="kiran" type="text"name="display" style="color: rgb(255, 0, 0);">
+<input class="kiran1" type="text"name="display" placeholder="enter a number" style="color: rgb(255, 0, 0);"><br>
+<input type="" class="kiran2"value="hi"><br>
 <input class="kiran" type="button" value="9" onclick="content.display.value+='9'">
 <input class="kiran" type="button" value="8" onclick="content.display.value+='8'">
 <input class="kiran" type="button" value="7" onclick="content.display.value+='7'">
